troubleshoot Actors and Still-cut layout issues

--- a/src/sass/movieinfostyle.sass
+++ b/src/sass/movieinfostyle.sass
@@ -322,6 +322,8 @@ img
     +respond-to($d-container-width)
       margin-top: 15px
       position: relative
+      display: block
+      width: 100%
 
 .actor-info-wrap
   overflow: hidden
